--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^5.0.0
   http: ^0.13.1
   flutter_secure_storage: ^4.1.0
+  socket_io_client: ^2.0.0-beta.3-nullsafety.0
 
 dev_dependencies:
   flutter_test:
